vpc.tf
# VPC
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = merge(var.tags, { Name = "main-vpc" })
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(var.tags, { Name = "main-igw" })
}

# Public Subnet (for EC2)
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = var.availability_zone_1
  map_public_ip_on_launch = true

  tags = merge(var.tags, { Name = "public-subnet" })
}

# Private Subnet 1 (for RDS)
resource "aws_subnet" "private_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_subnet_cidr_a
  availability_zone       = var.availability_zone_1
  map_public_ip_on_launch = false

  tags = merge(var.tags, { Name = "private-subnet-a" })
}

# Private Subnet 2
resource "aws_subnet" "private_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.private_subnet_cidr_b
  availability_zone       = var.availability_zone_2
  map_public_ip_on_launch = false

  tags = merge(var.tags, { Name = "private-subnet-b" })
}

# Elastic IP for NAT Gateway
resource "aws_eip" "nat_eip" {
  domain = "vpc"
  
  tags = merge(var.tags, { Name = "nat-eip" })
  
  depends_on = [aws_internet_gateway.igw]
}

# NAT Gateway to allow private subnet outbound access
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id = aws_subnet.public.id

  tags = merge(var.tags, { Name = "main-nat" })
  depends_on = [aws_internet_gateway.igw]
}

# Public route table
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  tags = merge(var.tags, { Name = "public-rt" })
}

# Route for public subnets to Internet Gateway
resource "aws_route" "public_internet_access" {
  route_table_id = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id
}

# Public route table association
resource "aws_route_table_association" "public_assoc" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public_rt.id
}

# Private Route Table
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id

  tags = merge(var.tags, { Name = "private-rt" })
}

# Route for private subnets to NAT Gateway
resource "aws_route" "private_via_nat" {
  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
  
  depends_on = [aws_nat_gateway.nat]
}

# Private route table 1 association
resource "aws_route_table_association" "private_assoc_a" {
  subnet_id = aws_subnet.private_a.id
  route_table_id = aws_route_table.private_rt.id
}

# Private route table 2 association
resource "aws_route_table_association" "private_assoc_b" {
  subnet_id = aws_subnet.private_b.id
  route_table_id = aws_route_table.private_rt.id
}
